ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytodoapp-ingress
spec:
  rules:
  - host: mytodoapp.com
    http:
      paths:
      - backend:
          service:
            name: nginxservice
            port:
              number: 8080
